[LT-16] Change response type